--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -49,6 +49,7 @@ button:disabled {
   font-size: 13px;
   font-weight: bold;
   padding: 5px;
+  pointer-events: none;
   position: absolute;
   text-align: center;
 }
